mongodb/manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  namespace: bsathi2020-dev
  labels:
    project: roboshop
    component: mongodb
    tier: db
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      project: roboshop
      component: mongodb
      tier: db
  template:
    metadata:
      labels:
        project: roboshop
        component: mongodb
        tier: db
    spec:
      containers:
      - name: mongodb
        image: bsathi2020/mongodb:openshift
        imagePullPolicy: Always
        readinessProbe:
          tcpSocket:
            port: 27017
          initialDelaySeconds: 10
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 27017
          initialDelaySeconds: 5
          periodSeconds: 5
        volumeMounts:
        - name: mongodb-data
          mountPath: /data/db
      volumes:
        - name: mongodb-data
          persistentVolumeClaim:
            claimName: mongodb-data
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: bsathi2020-dev
spec:
  selector:
    project: roboshop
    component: mongodb
    tier: db
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
